segundo commit (bg-white)

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
     </head>
     <body class="sb-nav-fixed">
-        <nav class="sb-topnav navbar navbar-expand navbar-dark bg-dark">
+        <nav class="sb-topnav navbar navbar-expand navbar-dark bg-white">
             <!-- Navbar Brand-->
             <img src="./images/Logo-Tecsidel.png" alt="Logo-Tecsidel" class="navbar-brand ps-4" href="index.html">
             <!-- Sidebar Toggle-->
