mudança para preto

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <img src="./images/Logo-Tecsidel.png" alt="Logo-Tecsidel" class="navbar-brand ps-4" href="index.html">
         <!-- Sidebar Toggle-->
         <button class="btn btn-link btn-lg order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i
-                class="fas fa-bars" style="color: #0C495A"></i></button>
+                class="fas fa-bars" style="color: #000"></i></button>
         <!-- Navbar Search-->
         <form class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
             <div class="input-group">
