--- a/index.html
+++ b/index.html
@@ -178,22 +178,38 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-xl-6">
+                        <div class="col-xl-8">
                             <div class="card mb-4">
-                                <div class="card-header text-white" style="background-color: #0C495A;">
+                                <div class="card-header" style="color: #0C495A; font-weight: 600;">
                                     <i class="fas fa-chart-area me-1"></i>
-                                    Gráfico em Colunas
+                                    MONITORAMENTO DE VEÍCULOS - MENSAL
                                 </div>
-                                <div class="card-body"><canvas id="myAreaChart" width="100%" height="40"></canvas></div>
+                                <div class="card-body">
+                                    <canvas id="myAreaChart" width="100%" height="75%"></canvas>
+                                </div>
                             </div>
                         </div>
-                        <div class="col-xl-6">
-                            <div class="card mb-4">
-                                <div class="card-header">
-                                    <i class="fas fa-chart-bar me-1"></i>
-                                    Gráfico em Barras
+                        <div class="col-xl-4">
+                                <div class="card mb-4">
+                                    <div class="card-header">
+                                        <i class="fas fa-chart-pie me-1"></i>
+                                        Pie Chart Example
+                                    </div>
+                                    <div class="card-body">
+                                        <canvas id="myDonutChart" width="100%" height="400%"></canvas>
+                                    </div>
+                                    <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
                                 </div>
-                                <div class="card-body"><canvas id="myBarChart" width="100%" height="40"></canvas></div>
+                        </div>
+                        <div class="col-xl-8">
+                            <div class="card mb-4">
+                                <div class="card-header" style="color: #0C495A; font-weight: 600;">
+                                    <i class="fas fa-chart-area me-1"></i>
+                                    MONITORAMENTO DE VEÍCULOS - MENSAL
+                                </div>
+                                <div class="card-body">
+                                    <canvas id="myAreaNewChart" width="100%" height="1275%"></canvas>
+                                </div>
                             </div>
                         </div>
                     </div>
@@ -354,6 +370,9 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js" crossorigin="anonymous"></script>
     <script src="assets/demo/chart-area-demo.js"></script>
     <script src="assets/demo/chart-bar-demo.js"></script>
+    <script src="assets/demo/chart-pie-demo.js"></script>
+    <script src="assets/demo/chart-donut-demo.js"></script>
+    <script src="assets/demo/chart-area-new-demo.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/simple-datatables@7.1.2/dist/umd/simple-datatables.min.js"
         crossorigin="anonymous"></script>
     <script src="js/datatables-simple-demo.js"></script>
