--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <img src="./images/Logo-Tecsidel.png" alt="Logo-Tecsidel" class="navbar-brand ps-4" href="index.html">
         <!-- Sidebar Toggle-->
         <button class="btn btn-link btn-lg order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i
-                class="fas fa-bars" style="color: #0C495A"></i></button>
+                class="fas fa-bars" style="color: hwb(193 5% 65%)"></i></button>
         <!-- Navbar Search-->
         <form class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
             <div class="input-group">
@@ -132,30 +132,41 @@
                         <li class="breadcrumb-item active"></li>
                     </ol>
                     <div class="row">
-                        <div class="col-xl-3 col-md-6">
-                            <div class="card text-white mb-4 bg-success" style="font-weight: bold;">
-                                <div class="card-body">Funcionários on-line</div>
-                                <div class="card-footer d-flex align-items-center justify-content-between">
-                                    <a class="small text-white stretched-link" href="#">View Details</a>
-                                    <div class="small text-white"><i class="fas fa-angle-right"></i></div>
-                                </div>
-                            </div>
-                        </div>
-                        <!-- Earnings (Monthly) Card Example -->
                         <div class="col-xl-3 col-md-6 mb-4">
-                            <div class="card shadow h-100 py-2">
-                                <div class="card-body text-xs font-weight-bold border-left-1 text-primary text-uppercase mb-1">
-                                    Total Funcionários</div>
-                                <div class="card-footer">
+                            <div class="card shadow h-100 py-2" style="border-left: 4px solid #0C495A">
+                                <div class="card-header small text-uppercase" 
+                                style="font-weight: 700; color: #0C495A">
+                                    Funcionários Online</div>
+                                <div class="card-body">
                                     <div class="row no-gutters align-items-center">
                                         <div class="col mr-2">
-                                            <div class="h5 mb-0 ml-10 font-weight-bold text-gray-800">324</div>
+                                            <div class="h5 mb-0 ml-10" style="font-weight: 700; color: #0C495A">54</div>
                                         </div>
                                         <div class="col-auto">
-                                            <i class="fas fa-person fa-2x text-gray-300"></i>
+                                            <i class="fas fa-circle-user fa-2x" style="color: #c9c9c9"></i>
                                         </div>
                                     </div>
                                 </div>
+                                <div class="card-footer small text-muted">Atualizado 11 minutos atrás</div>
+                            </div>
+                        </div>
+                        <!-- Total Funcionarios Card -->
+                        <div class="col-xl-3 col-md-6 mb-4">
+                            <div class="card shadow h-100 py-2" style="border-left: 3px solid #46a3ce">
+                                <div class="card-header small text-uppercase" 
+                                style="font-weight: 700; color: #36749e">
+                                    Câmeras disponíveis</div>
+                                <div class="card-body">
+                                    <div class="row no-gutters align-items-center">
+                                        <div class="col mr-2">
+                                            <div class="h5 mb-0 ml-10 font-weight-bold text-gray-800">7024</div>
+                                        </div>
+                                        <div class="col-auto">
+                                            <i class="fas fa-camera-rotate fa-2x" style="color: #c9c9c9"></i>
+                                        </div>
+                                    </div>
+                                </div>
+                                <div class="card-footer small text-muted">Atualizado 11 minutos atrás</div>
                             </div>
                         </div>
                         <div class="col-xl-3 col-md-6">
@@ -178,38 +189,33 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-xl-8">
-                            <div class="card mb-4">
-                                <div class="card-header" style="color: #0C495A; font-weight: 600;">
-                                    <i class="fas fa-chart-area me-1"></i>
-                                    MONITORAMENTO DE VEÍCULOS - MENSAL
-                                </div>
-                                <div class="card-body">
-                                    <canvas id="myAreaChart" width="100%" height="75%"></canvas>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-xl-4">
-                                <div class="card mb-4">
-                                    <div class="card-header">
-                                        <i class="fas fa-chart-pie me-1"></i>
-                                        Pie Chart Example
+                        <div class="col-xl-6">
+                                <div class="card mb-4" >
+                                    <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                                        <h6 class="m-0 text-uppercase small" style="font-weight: 700; color: #0C495A">
+                                        Tipo do veículo (MÊS)</h6>
                                     </div>
                                     <div class="card-body">
-                                        <canvas id="myDonutChart" width="100%" height="400%"></canvas>
+                                        <canvas id="myDonutChart" width="100%" height="300%"></canvas>
                                     </div>
-                                    <div class="card-footer small text-muted">Updated yesterday at 11:59 PM</div>
+
+                                    <div class="card-footer small text-muted">Atualizado 11 minutos atrás</div>
+                                    
                                 </div>
                         </div>
-                        <div class="col-xl-8">
-                            <div class="card mb-4">
-                                <div class="card-header" style="color: #0C495A; font-weight: 600;">
-                                    <i class="fas fa-chart-area me-1"></i>
-                                    MONITORAMENTO DE VEÍCULOS - MENSAL
+                        <div class="col-12">
+                            <div class="card shadow mb-4">
+                                <!-- Card Header - Dropdown -->
+                                <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
+                                    <h6 class="m-0 font-weight-bold text-primary">Earnings Overview</h6>
                                 </div>
+                                <!-- Card Body -->
                                 <div class="card-body">
-                                    <canvas id="myAreaNewChart" width="100%" height="1275%"></canvas>
+                                    <div class="chart-area">
+                                        <canvas id="myAreaChart" width="100%" height="300%"></canvas>
+                                    </div>
                                 </div>
+                                <div class="card-footer small text-muted">Atualizado 11 minutos atrás</div>
                             </div>
                         </div>
                     </div>
