arrumei a a palavra instituições que estava escrito errado

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion" style="background-color: #0C495A;">
                 <div class="sb-sidenav-menu">
                     <div class="nav">
-                        <div class="sb-sidenav-menu-heading">Intituições</div>
+                        <div class="sb-sidenav-menu-heading">Instituições</div>
                         <a class="nav-link" href="https://www.fiap.com.br/">
                             <div class="sb-nav-link-icon"><i class="fa-solid fa-book-open"></i></div>
                             FIAP
