adicionado o menu com o dashboard

--- a/index.html
+++ b/index.html
@@ -50,6 +50,13 @@
             <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion" style="background-color: #0C495A;">
                 <div class="sb-sidenav-menu">
                     <div class="nav">
+
+                        <div class="sb-sidenav-menu-heading">Menu</div>
+                        <a class="nav-link" href="index.html">
+                            <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
+                            Dashboard
+                        </a>
+
                         <div class="sb-sidenav-menu-heading">Instituições</div>
                         <a class="nav-link" href="https://www.fiap.com.br/">
                             <div class="sb-nav-link-icon"><i class="fa-solid fa-book-open"></i></div>
