nav branco e cards de fluxo de veículos alterados

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body class="sb-nav-fixed">
-    <nav class="sb-topnav navbar navbar-expand navbar-dark" style="background-color: #A4CE46;">
+    <nav class="sb-topnav navbar navbar-expand navbar-dark shadow" style="background-color: #fff;">
         <!-- Navbar Brand-->
         <img src="./images/Logo-Tecsidel.png" alt="Logo-Tecsidel" class="navbar-brand ps-4" href="index.html">
         <!-- Sidebar Toggle-->
@@ -220,7 +220,7 @@
                         </div>
                     </div>
                     <div class="row">
-                        <div class="col-xl-6">
+                        <div class="col-xl-7">
                                 <div class="card mb-4" >
                                     <div class="card-header py-3 d-flex flex-row align-items-center justify-content-between">
                                         <h6 class="m-0 text-uppercase small" style="font-weight: 700; color: #0C495A">
@@ -232,7 +232,7 @@
                                     <div class="card-footer small text-muted">Atualizado 11 minutos atrás</div>
                                 </div>
                         </div>
-                        <div class="row col-xl-1 col-0"></div>
+                        <div class="row col-xl"></div>
                         <div class="row col-xl-5 col-12">
                             <div class="col-xl-12 col-6 mb-4">
                                 <div class="card shadow h-100">
