develop com merge do home e menu

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body class="sb-nav-fixed">
-    <nav class="sb-topnav navbar navbar-expand navbar-dark shadow" style="background-color: #fff;">
+    <nav class="sb-topnav navbar navbar-expand navbar-dark shadow" style="background-color: #A4CE46;">
         <!-- Navbar Brand-->
         <img src="./images/Logo-Tecsidel.png" alt="Logo-Tecsidel" class="navbar-brand ps-4" href="index.html">
         <!-- Sidebar Toggle-->
@@ -35,12 +35,7 @@
                 <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown"
                     aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="#!">Settings</a></li>
-                    <li><a class="dropdown-item" href="#!">Activity Log</a></li>
-                    <li>
-                        <hr class="dropdown-divider" />
-                    </li>
-                    <li><a class="dropdown-item" href="#!">Logout</a></li>
+                    <li><a class="dropdown-item" href="/login.html">Logout</a></li>
                 </ul>
             </li>
         </ul>
