cor do nav para branco, links do menu corrigidos

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body class="sb-nav-fixed">
-    <nav class="sb-topnav navbar navbar-expand navbar-dark shadow" style="background-color: #A4CE46;">
+    <nav class="sb-topnav navbar navbar-expand navbar-dark shadow" style="background-color: white;">
         <!-- Navbar Brand-->
         <img src="./images/Logo-Tecsidel.png" alt="Logo-Tecsidel" class="navbar-brand ps-4" href="index.html">
         <!-- Sidebar Toggle-->
@@ -33,7 +33,7 @@
         <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4">
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown"
-                    aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
+                    aria-expanded="false" style="color: #0C495A"><i class="fas fa-user fa-fw" style="color: #0C495A"></i></a>
                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
                     <li><a class="dropdown-item" href="/login.html">Logout</a></li>
                 </ul>
@@ -53,33 +53,33 @@
                         </a>
 
                         <div class="sb-sidenav-menu-heading">Instituições</div>
-                        <a class="nav-link" href="https://www.fiap.com.br/">
+                        <a class="nav-link" href="https://www.fiap.com.br/" target="_blank">
                             <div class="sb-nav-link-icon"><i class="fa-solid fa-book-open"></i></div>
                             FIAP
                         </a>
-                        <a class="nav-link" href="https://www.linkedin.com/company/tecsidel-do-brasil-ltda/">
+                        <a class="nav-link" href="https://www.tecsidel.com/en/" target="_blank">
                             <div class="sb-nav-link-icon"><i class="fa-solid fa-city"></i></div>
                             TECSIDEL
                         </a>
                         
                         <div class="sb-sidenav-menu-heading">Integrantes</div>
-                        <a class="nav-link" href="https://www.linkedin.com/in/gabgt/">
+                        <a class="nav-link" href="https://www.linkedin.com/in/gabgt/" target="_blank">
                             <div class="sb-nav-link-icon"><i class="fa-brands fa-linkedin-in"></i></div>
                             Gabrielle Giambastiani
                         </a>
-                        <a class="nav-link" href="https://www.linkedin.com/in/guilherme-amorim-6826a423a/">
+                        <a class="nav-link" href="https://www.linkedin.com/in/guilherme-amorim-6826a423a/" target="_blank">
                             <div class="sb-nav-link-icon"><i class="fa-brands fa-linkedin-in"></i></div>
                             Guilherme Amorim
                         </a>
-                        <a class="nav-link" href="https://www.linkedin.com/in/samuel-gomes-716b60203/">
+                        <a class="nav-link" href="https://www.linkedin.com/in/samuel-gomes-716b60203/" target="_blank">
                             <div class="sb-nav-link-icon"><i class="fa-brands fa-linkedin-in"></i></div>
                             Samuel Gomes
                         </a>
-                        <a class="nav-link" href="https://www.linkedin.com/in/tiago-farsoni-siemann-3abb22242/">
+                        <a class="nav-link" href="https://www.linkedin.com/in/tiago-farsoni-siemann-3abb22242/" target="_blank">
                             <div class="sb-nav-link-icon"><i class="fa-brands fa-linkedin-in"></i></div>
                             Tiago F. Siemann
                         </a>
-                        <a class="nav-link" href="">
+                        <a class="nav-link" href="https://www.linkedin.com/in/lucas-montagnana-57619823a/" target="_blank">
                             <div class="sb-nav-link-icon"><i class="fa-brands fa-linkedin-in"></i></div>
                             Lucas F. Montagnana
                         </a>
