Porticos especificos para cada rodovia

--- a/index.html
+++ b/index.html
@@ -240,7 +240,7 @@
                                         <td>KM 110</td>
                                         <td>São Paulo</td>
                                         <td>Manutenção</td>
-                                        <td><a href="" class="text-primary  ">
+                                        <td><a href="portico_RJ_BR101.html" class="text-primary">
                                                 <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20"
                                                     fill="currentColor" class="bi bi-info-square-fill"
                                                     viewBox="0 0 16 16">
@@ -257,7 +257,7 @@
                                         <td>KM 20</td>
                                         <td>Rio de Janeiro</td>
                                         <td>Emergência</td>
-                                        <td><a href="#" class="text-primary"><svg xmlns="http://www.w3.org/2000/svg"
+                                        <td><a href="portico_SP_BR102.html" class="text-primary"><svg xmlns="http://www.w3.org/2000/svg"
                                                     width="20" height="20" fill="currentColor"
                                                     class="bi bi-info-square-fill" viewBox="0 0 16 16">
                                                     <path
