--- a/portico_RJ_BR101.html
+++ b/portico_RJ_BR101.html
@@ -18,18 +18,18 @@
 </head>
 
 <body class="sb-nav-fixed">
-    <nav class="sb-topnav navbar navbar-expand navbar-dark" style="background-color: #A4CE46;">
+    <nav class="sb-topnav navbar navbar-expand navbar-dark shadow" style="background-color: white;">
         <!-- Navbar Brand-->
         <img src="./images/Logo-Tecsidel.png" alt="Logo-Tecsidel" class="navbar-brand ps-4" href="index.html">
         <!-- Sidebar Toggle-->
         <button class="btn btn-link btn-lg order-1 order-lg-0 me-4 me-lg-0" id="sidebarToggle" href="#!"><i
-                class="fas fa-bars" style="color: #0C495A"></i></button>
+                class="fas fa-bars" style="color: hwb(193 5% 65%)"></i></button>
         <!-- Navbar Search-->
         <form class="d-none d-md-inline-block form-inline ms-auto me-0 me-md-3 my-2 my-md-0">
             <div class="input-group">
-                <input class="form-control" type="text" placeholder="Search for..." aria-label="Search for..."
+                <input class="form-control" type="text" placeholder="Pesquisar..." aria-label="Search for..."
                     aria-describedby="btnNavbarSearch" />
-                <button class="btn btn-primary" id="btnNavbarSearch" type="button"><i
+                <button class="btn btn-primary" id="btnNavbarSearch" type="button" style="background-color: #0C495A;"><i
                         class="fas fa-search"></i></button>
             </div>
         </form>
@@ -37,90 +37,55 @@
         <ul class="navbar-nav ms-auto ms-md-0 me-3 me-lg-4">
             <li class="nav-item dropdown">
                 <a class="nav-link dropdown-toggle" id="navbarDropdown" href="#" role="button" data-bs-toggle="dropdown"
-                    aria-expanded="false"><i class="fas fa-user fa-fw"></i></a>
+                    aria-expanded="false" style="color: #0C495A"><i class="fas fa-user fa-fw" style="color: #0C495A"></i></a>
                 <ul class="dropdown-menu dropdown-menu-end" aria-labelledby="navbarDropdown">
-                    <li><a class="dropdown-item" href="#!">Settings</a></li>
-                    <li><a class="dropdown-item" href="#!">Activity Log</a></li>
-                    <li>
-                        <hr class="dropdown-divider" />
-                    </li>
-                    <li><a class="dropdown-item" href="#!">Logout</a></li>
+                    <li><a class="dropdown-item" href="/login.html">Logout</a></li>
                 </ul>
             </li>
         </ul>
     </nav>
-
     <div id="layoutSidenav">
         <div id="layoutSidenav_nav">
             <nav class="sb-sidenav accordion sb-sidenav-dark" id="sidenavAccordion" style="background-color: #0C495A;">
                 <div class="sb-sidenav-menu">
                     <div class="nav">
-                        <div class="sb-sidenav-menu-heading">Core</div>
+
+                        <div class="sb-sidenav-menu-heading">Menu</div>
                         <a class="nav-link" href="index.html">
                             <div class="sb-nav-link-icon"><i class="fas fa-tachometer-alt"></i></div>
                             Dashboard
                         </a>
-                        <div class="sb-sidenav-menu-heading">Interface</div>
-                        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse"
-                            data-bs-target="#collapseLayouts" aria-expanded="false" aria-controls="collapseLayouts">
-                            <div class="sb-nav-link-icon"><i class="fas fa-columns"></i></div>
-                            Layouts
-                            <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
+
+                        <div class="sb-sidenav-menu-heading">Instituições</div>
+                        <a class="nav-link" href="https://www.fiap.com.br/" target="_blank">
+                            <div class="sb-nav-link-icon"><i class="fa-solid fa-book-open"></i></div>
+                            FIAP
                         </a>
-                        <div class="collapse" id="collapseLayouts" aria-labelledby="headingOne"
-                            data-bs-parent="#sidenavAccordion">
-                            <nav class="sb-sidenav-menu-nested nav">
-                                <a class="nav-link" href="layout-static.html">Static Navigation</a>
-                                <a class="nav-link" href="layout-sidenav-light.html">Light Sidenav</a>
-                            </nav>
-                        </div>
-                        <a class="nav-link collapsed" href="#" data-bs-toggle="collapse" data-bs-target="#collapsePages"
-                            aria-expanded="false" aria-controls="collapsePages">
-                            <div class="sb-nav-link-icon"><i class="fas fa-book-open"></i></div>
-                            Pages
-                            <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
+                        <a class="nav-link" href="https://www.tecsidel.com/en/" target="_blank">
+                            <div class="sb-nav-link-icon"><i class="fa-solid fa-city"></i></div>
+                            TECSIDEL
                         </a>
-                        <div class="collapse" id="collapsePages" aria-labelledby="headingTwo"
-                            data-bs-parent="#sidenavAccordion">
-                            <nav class="sb-sidenav-menu-nested nav accordion" id="sidenavAccordionPages">
-                                <a class="nav-link collapsed" href="#" data-bs-toggle="collapse"
-                                    data-bs-target="#pagesCollapseAuth" aria-expanded="false"
-                                    aria-controls="pagesCollapseAuth">
-                                    Authentication
-                                    <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
-                                </a>
-                                <div class="collapse" id="pagesCollapseAuth" aria-labelledby="headingOne"
-                                    data-bs-parent="#sidenavAccordionPages">
-                                    <nav class="sb-sidenav-menu-nested nav">
-                                        <a class="nav-link" href="login.html">Login</a>
-                                        <a class="nav-link" href="register.html">Register</a>
-                                        <a class="nav-link" href="password.html">Forgot Password</a>
-                                    </nav>
-                                </div>
-                                <a class="nav-link collapsed" href="#" data-bs-toggle="collapse"
-                                    data-bs-target="#pagesCollapseError" aria-expanded="false"
-                                    aria-controls="pagesCollapseError">
-                                    Error
-                                    <div class="sb-sidenav-collapse-arrow"><i class="fas fa-angle-down"></i></div>
-                                </a>
-                                <div class="collapse" id="pagesCollapseError" aria-labelledby="headingOne"
-                                    data-bs-parent="#sidenavAccordionPages">
-                                    <nav class="sb-sidenav-menu-nested nav">
-                                        <a class="nav-link" href="401.html">401 Page</a>
-                                        <a class="nav-link" href="404.html">404 Page</a>
-                                        <a class="nav-link" href="500.html">500 Page</a>
-                                    </nav>
-                                </div>
-                            </nav>
-                        </div>
-                        <div class="sb-sidenav-menu-heading">Addons</div>
-                        <a class="nav-link" href="charts.html">
-                            <div class="sb-nav-link-icon"><i class="fas fa-chart-area"></i></div>
-                            Charts
+                        
+                        <div class="sb-sidenav-menu-heading">Integrantes</div>
+                        <a class="nav-link" href="https://www.linkedin.com/in/gabgt/" target="_blank">
+                            <div class="sb-nav-link-icon"><i class="fa-brands fa-linkedin-in"></i></div>
+                            Gabrielle Giambastiani
                         </a>
-                        <a class="nav-link" href="tables.html">
-                            <div class="sb-nav-link-icon"><i class="fas fa-table"></i></div>
-                            Tables
+                        <a class="nav-link" href="https://www.linkedin.com/in/guilherme-amorim-6826a423a/" target="_blank">
+                            <div class="sb-nav-link-icon"><i class="fa-brands fa-linkedin-in"></i></div>
+                            Guilherme Amorim
+                        </a>
+                        <a class="nav-link" href="https://www.linkedin.com/in/samuel-gomes-716b60203/" target="_blank">
+                            <div class="sb-nav-link-icon"><i class="fa-brands fa-linkedin-in"></i></div>
+                            Samuel Gomes
+                        </a>
+                        <a class="nav-link" href="https://www.linkedin.com/in/tiago-farsoni-siemann-3abb22242/" target="_blank">
+                            <div class="sb-nav-link-icon"><i class="fa-brands fa-linkedin-in"></i></div>
+                            Tiago F. Siemann
+                        </a>
+                        <a class="nav-link" href="https://www.linkedin.com/in/lucas-montagnana-57619823a/" target="_blank">
+                            <div class="sb-nav-link-icon"><i class="fa-brands fa-linkedin-in"></i></div>
+                            Lucas F. Montagnana
                         </a>
                     </div>
                 </div>
