acrescentado os outros pórticos e as outras faixas com dispositivos, imagens e tabelas

--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                                         <td>KM 30</td>
                                         <td>Rio de Janeiro</td>
                                         <td>Normal</td>
-                                        <td><a href="#" class="text-primary"><svg xmlns="http://www.w3.org/2000/svg"
+                                        <td><a href="portico_MG_BR103.html" class="text-primary"><svg xmlns="http://www.w3.org/2000/svg"
                                                     width="20" height="20" fill="currentColor"
                                                     class="bi bi-info-square-fill" viewBox="0 0 16 16">
                                                     <path
@@ -288,7 +288,7 @@
                                         <td>KM 45</td>
                                         <td>Curitiba</td>
                                         <td>Emergência</td>
-                                        <td><a href="#" class="text-primary"><svg xmlns="http://www.w3.org/2000/svg"
+                                        <td><a href="portico_RS_BR104.html" class="text-primary"><svg xmlns="http://www.w3.org/2000/svg"
                                                     width="20" height="20" fill="currentColor"
                                                     class="bi bi-info-square-fill" viewBox="0 0 16 16">
                                                     <path
@@ -299,11 +299,11 @@
                                         <td>05</td>
                                         <td>SC</td>
                                         <td>Florianópolis</td>
-                                        <td>RS-12</td>
+                                        <td>BR-12</td>
                                         <td>KM 22</td>
                                         <td>Porto Alegre</td>
                                         <td>Normal</td>
-                                        <td><a href="#" class="text-primary"><svg xmlns="http://www.w3.org/2000/svg"
+                                        <td><a href="portico_SC_BR12.html" class="text-primary"><svg xmlns="http://www.w3.org/2000/svg"
                                                     width="20" height="20" fill="currentColor"
                                                     class="bi bi-info-square-fill" viewBox="0 0 16 16">
                                                     <path
@@ -318,7 +318,7 @@
                                         <td>KM 18</td>
                                         <td>Recife</td>
                                         <td>Emergência</td>
-                                        <td><a href="#" class="text-primary"><svg xmlns="http://www.w3.org/2000/svg"
+                                        <td><a href="portico_BA_BR120.html" class="text-primary"><svg xmlns="http://www.w3.org/2000/svg"
                                                     width="20" height="20" fill="currentColor"
                                                     class="bi bi-info-square-fill" viewBox="0 0 16 16">
                                                     <path
