--- a/portico_SC_BR12.html
+++ b/portico_SC_BR12.html
@@ -98,7 +98,7 @@
         <div id="layoutSidenav_content">
             <main>
                 <div class="container-fluid px-4">
-                    <h1 class="mt-4 mb-4 text-uppercase">SP - SÃO PAULO BR-102</h1>
+                    <h1 class="mt-4 mb-4 text-uppercase">SC - FLORIANÓPOLIS BR-12</h1>
                     <!--inicio accordion-->
                     <div class="accordion" id="accordionPanelsStayOpenExample">
                         <div class="accordion-item">
