links para as paginas

--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
                                         <td>KM 110</td>
                                         <td>São Paulo</td>
                                         <td>Manutenção</td>
-                                        <td><a href="" class="text-primary">
+                                        <td><a href="portico_RJ_BR101.html" class="text-primary">
                                             <i class="fas fa-share-from-square" style="height: 20px;"></i>
                                             </a></td>
                                     </tr>
@@ -309,7 +309,7 @@
                                         <td>Rio de Janeiro</td>
                                         <td>Emergência</td>
                                         <td>
-                                            <a href="#" class="text-primary">
+                                            <a href="portico_SP_BR102.html" class="text-primary">
                                                 <i class="fas fa-share-from-square" style="height: 20px;"></i>
                                             </a>
                                         </td>
@@ -324,7 +324,7 @@
                                         <td>Rio de Janeiro</td>
                                         <td>Normal</td>
                                         <td>
-                                            <a href="#" class="text-primary">
+                                            <a href="portico_MG_BR103.html" class="text-primary">
                                                 <i class="fas fa-share-from-square" style="height: 20px;"></i>
                                             </a>
                                         </td>
@@ -338,7 +338,7 @@
                                         <td>Curitiba</td>
                                         <td>Emergência</td>
                                         <td>
-                                            <a href="#" class="text-primary">
+                                            <a href="portico_RS_BR104.html" class="text-primary">
                                                 <i class="fas fa-share-from-square" style="height: 20px;"></i>
                                             </a>
                                         </td>
@@ -352,7 +352,7 @@
                                         <td>Porto Alegre</td>
                                         <td>Normal</td>
                                         <td>
-                                            <a href="#" class="text-primary">
+                                            <a href="portico_SC_BR12.html" class="text-primary">
                                                 <i class="fas fa-share-from-square" style="height: 20px;"></i>
                                             </a>
                                         </td>
@@ -366,7 +366,7 @@
                                         <td>Recife</td>
                                         <td>Emergência</td>
                                         <td>
-                                            <a href="#" class="text-primary">
+                                            <a href="portico_BA_BR120.html" class="text-primary">
                                                 <i class="fas fa-share-from-square" style="height: 20px;"></i>
                                             </a>
                                         </td>
